#71. spaceView 페이지 옵션리스트 1차 DTO 변경 완료 -> 이미지가 출력안되는 문제 해결 필요